--- a/.github/workflows/K40-Kernel.yml
+++ b/.github/workflows/K40-Kernel.yml
@@ -1,11 +1,7 @@
 name: Build MIUI K40 RK
 
-on: 
-  schedule:
-    - cron:  '20 22 * * 1,3,5'
+on:   
   workflow_dispatch:
-  push:
-
   
 jobs:
   build:  
@@ -86,6 +82,7 @@ jobs:
         FINAL_ZINAME="${{ env.ZIMAGE_NAME }}"
         mkdir ${{ env.KERNEL_DIR }}/image_output
         cp -fp tmp/tmp.zip ../image_output/${FINAL_ZINAME}.zip
+        md5sum ../image_output/${FINAL_ZINAME}.zip >../image_output/${FINAL_ZINAME}.zip.md5sum
         rm -rf out
         
     - name: Upload Kernel Image ZIP
