--- a/.github/workflows/K40.yml
+++ b/.github/workflows/K40.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    uses: actions/checkout@v3
+    - uses: actions/checkout@v3
     - name: Checkout Kernel Source Code
       run: |
         git clone --depth=1 https://codeberg.org/HK122707/K40-KSU -b 12.1-alioth android-kernel
