--- a/.github/workflows/K40-MIUI.yml
+++ b/.github/workflows/K40-MIUI.yml
@@ -32,8 +32,10 @@ jobs:
     - name: Setup KernelSU
       run: |
         cd android-kernel
-        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -        
- 
+        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
+        wget -q "https://raw.githubusercontent.com/WeeAris/RK-KSU-AOSP-Daily-Build/main/0001-Add-KernelSU-calls-to-the-kernel-source.patch" -O KernelSU.patch
+        git apply ./KernelSU.patch
+        
     - name: Generate Kernel Configuration
       run: |
         cd android-kernel
