--- a/.github/workflows/K40.yml
+++ b/.github/workflows/K40.yml
@@ -82,14 +82,13 @@ jobs:
         cd ..
         echo "FINAL_ZINAME="${{ env.ZIMAGE_NAME }}"" >> $GITHUB_ENV
         FINAL_ZINAME="${{ env.ZIMAGE_NAME }}"
-        cp -fp tmp/tmp.zip RK-K40_MIUI(SU).zip
-        rm -rf tmp/tmp.zip        
+        rm -rf out
         
     - name: Upload Kernel Image ZIP
       uses: actions/upload-artifact@v3
       with:
         name: ${{ env.FINAL_ZINAME }}
-        path: tmp/RK-K40_MIUI(SU).zip
+        path: tmp/*
         
 
     
