--- a/.github/workflows/K40.yml
+++ b/.github/workflows/K40.yml
@@ -88,7 +88,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: ${{ env.FINAL_ZINAME }}
-        path: tmp/*
+        path: tmp/*.zip
         
 
     
