--- a/.github/workflows/K40.yml
+++ b/.github/workflows/K40.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Checkout Kernel Source Code
       run: |
-        git clone --depth=1 https://codeberg.org/HK122707/K40-KSU -b 12.1-alioth android-kernel
+        git clone --depth=1 https://codeberg.org/HK122707/RK10.2 -b 12.1-alioth android-kernel
       
     - name: Setup Build Environment
       run: |
@@ -30,6 +30,8 @@ jobs:
       run: |
         cd android-kernel
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
+        wget -q "https://raw.githubusercontent.com/WeeAris/RK-KSU-AOSP-Daily-Build/main/0001-Add-KernelSU-calls-to-the-kernel-source.patch" -O KernelSU.patch
+        git apply ./KernelSU.patch
         
     - name: Generate Kernel Configuration
       run: |
@@ -53,7 +55,7 @@ jobs:
         make CC=clang O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_COMPAT=arm-linux-gnueabi- NM=llvm-nm  OBJDUMP=llvm-objdump STRIP=llvm-strip $KERNEL_DEFCONFIG 
         ######################
         sed -i "/RealKing/{s/-/-${KSU_VERSION}-/}" out/.config
-        sed -i "/RealKing/{s/RealKing/RK-KSU/}" out/.config
+        sed -i "/RealKing/{s/~RealKing/RK-KSU/}" out/.config
         KERNEL_NAME=`grep "RK-KSU" out/.config | sed 's|//|-|' | awk -F\" '{print $2}'`
         echo "ZIMAGE_NAME=${KERNEL_NAME}-${DEVICE_NAME}" >> $GITHUB_ENV
                 
