--- a/.github/workflows/K40.yml
+++ b/.github/workflows/K40.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Checkout Kernel Source Code
       run: |
-        git clone --depth=1 https://codeberg.org/HK122707/RK10.4 -b 12.1-alioth android-kernel
+        git clone --depth=1 https://codeberg.org/HK122707/RK10.2 -b 12.1-alioth android-kernel
       
     - name: Setup Build Environment
       run: |
@@ -64,7 +64,7 @@ jobs:
         SUBARCH=arm64 
         KBUILD_BUILD_HOST=GitHub
         KBUILD_BUILD_USER=$(echo ${{ github.actor }} | tr A-Z a-z)       
-        make -j$(nproc --all) CC=clang O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_COMPAT=arm-linux-gnueabi- NM=llvm-nm LLVM=1 LLVM_IAS=1
+        make -j$(nproc --all) CC=clang O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_COMPAT=arm-linux-gnueabi- NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip
   
     - name: ZIP Kernel
       run: |
