--- a/.github/workflows/K40.yml
+++ b/.github/workflows/K40.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Setup KernelSU
       run: |
         cd android-kernel
+        echo "CONFIG_SECCOMP=y" >> arch/arm64/configs/vendor/alioth_defconfig
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
         wget -q "https://raw.githubusercontent.com/WeeAris/RK-KSU-AOSP-Daily-Build/main/0001-Add-KernelSU-calls-to-the-kernel-source.patch" -O KernelSU.patch
         git apply ./KernelSU.patch
