--- a/.github/workflows/K40-MIUI.yml
+++ b/.github/workflows/K40-MIUI.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         cd android-kernel
         sed -i 's/CONFIG_LOCALVERSION=/# /' arch/arm64/configs/vendor/alioth_defconfig
-        sed -i '/-Reborn/aCONFIG_LOCALVERSION="~MIUI-RK-SU//"' arch/arm64/configs/vendor/alioth_defconfig
+        sed -i '/-Reborn/aCONFIG_LOCALVERSION="~MIUI-RK-SU"' arch/arm64/configs/vendor/alioth_defconfig
         echo "CONFIG_SECCOMP=y" >> arch/arm64/configs/vendor/alioth_defconfig
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
         wget -q "https://raw.githubusercontent.com/WeeAris/RK-KSU-AOSP-Daily-Build/main/0001-Add-KernelSU-calls-to-the-kernel-source.patch" -O KernelSU.patch
@@ -79,7 +79,7 @@ jobs:
         cp -fp ${{ env.ZIMAGE_DIR }}/Image.gz tmp
         cp -fp ${{ env.ZIMAGE_DIR }}/dtbo.img tmp
         cp -fp ${{ env.ZIMAGE_DIR }}/dtb tmp
-        cp -rp ./anykernel/* tmp
+        cp -rp ./AnyKernel3/* tmp
         cd tmp
         7za a -mx9 tmp.zip *
         cd ..
