--- a/.github/workflows/K40.yml
+++ b/.github/workflows/K40.yml
@@ -28,7 +28,9 @@ jobs:
       
     - name: Setup KernelSU
       run: |
-        cd android-kernel
+        cd android-kernel       
+        sed -i 's/CONFIG_LOCALVERSION=/# /' arch/arm64/configs/vendor/alioth_defconfig
+        sed -i '/-Reborn/aCONFIG_LOCALVERSION="~RealKing"' arch/arm64/configs/vendor/alioth_defconfig
         echo "CONFIG_SECCOMP=y" >> arch/arm64/configs/vendor/alioth_defconfig
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
         wget -q "https://raw.githubusercontent.com/WeeAris/RK-KSU-AOSP-Daily-Build/main/0001-Add-KernelSU-calls-to-the-kernel-source.patch" -O KernelSU.patch
@@ -55,7 +57,7 @@ jobs:
         ######################
         make CC=clang O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_COMPAT=arm-linux-gnueabi- NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip $KERNEL_DEFCONFIG
         ######################        
-        echo "ZIMAGE_NAME=RK-${DEVICE_NAME}" >> $GITHUB_ENV
+        echo "ZIMAGE_NAME=RealKing-${KSU_VERSION}" >> $GITHUB_ENV
                 
     - name: Build Kernel
       run: |
