--- a/.github/workflows/K40-MIUI.yml
+++ b/.github/workflows/K40-MIUI.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         github-server-url: 'https://github.com'
-        repository: Rohail33/RealKing-kernel-SM8250
+        repository: Rohail33/RealKing_kernel_SM8250
         ref: alioth
         path: android-kernel
         
@@ -34,7 +34,7 @@ jobs:
         cd android-kernel
         sed -i 's/CONFIG_LOCALVERSION=/# /' arch/arm64/configs/vendor/alioth_defconfig
         sed -i '/-Reborn/aCONFIG_LOCALVERSION="~RealKing"' arch/arm64/configs/vendor/alioth_defconfig
-        echo "CONFIG_SECCOMP=y" >> arch/arm64/configs/vendor/alioth_defconfig
+#        echo "CONFIG_SECCOMP=y" >> arch/arm64/configs/vendor/alioth_defconfig
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
         wget -q "https://raw.githubusercontent.com/WeeAris/RK-KSU-AOSP-Daily-Build/main/0001-Add-KernelSU-calls-to-the-kernel-source.patch" -O KernelSU.patch
         git apply ./KernelSU.patch
