--- a/.github/workflows/K40-MIUI.yml
+++ b/.github/workflows/K40-MIUI.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Setup KernelSU
       run: |
         cd android-kernel
+        git clone --depth=1 https://github.com/HK122707/AnyKernel3 -b master
         sed -i 's/CONFIG_LOCALVERSION=/# /' arch/arm64/configs/alioth_defconfig
         sed -i '/-Reborn/aCONFIG_LOCALVERSION="~RealKing"' arch/arm64/configs/alioth_defconfig
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
@@ -74,7 +75,6 @@ jobs:
       run: |
         mkdir image_output
         cd android-kernel
-        git clone https://github.com/HK122707/AnyKernel3
         mkdir -p tmp
         cp -fp ${{ env.ZIMAGE_DIR }}/Image.gz tmp
         cp -fp ${{ env.ZIMAGE_DIR }}/dtbo.img tmp
