--- a/.github/workflows/K40.yml
+++ b/.github/workflows/K40.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Checkout Kernel Source Code
       run: |
-        git clone --depth=1 https://codeberg.org/HK122707/RK10.2 -b 12.1-alioth android-kernel
+        git clone --depth=1 https://codeberg.org/HK122707/10.8 -b alioth android-kernel
       
     - name: Setup Build Environment
       run: |
@@ -31,10 +31,7 @@ jobs:
         cd android-kernel       
         sed -i 's/CONFIG_LOCALVERSION=/# /' arch/arm64/configs/vendor/alioth_defconfig
         sed -i '/-Reborn/aCONFIG_LOCALVERSION="~Super-GT"' arch/arm64/configs/vendor/alioth_defconfig
-        echo "CONFIG_SECCOMP=y" >> arch/arm64/configs/vendor/alioth_defconfig
-        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
-        wget -q "https://raw.githubusercontent.com/WeeAris/RK-KSU-AOSP-Daily-Build/main/0001-Add-KernelSU-calls-to-the-kernel-source.patch" -O KernelSU.patch
-        git apply ./KernelSU.patch
+        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -        
                 
     - name: Generate Kernel Configuration
       run: |
