--- a/.github/workflows/K40.yml
+++ b/.github/workflows/K40.yml
@@ -28,7 +28,8 @@ jobs:
       
     - name: Setup KernelSU
       run: |
-        cd android-kernel       
+        cd android-kernel
+        rm -rf KernelSU    
         sed -i 's/CONFIG_LOCALVERSION=/# /' arch/arm64/configs/alioth_defconfig
         sed -i '/-Reborn/aCONFIG_LOCALVERSION="~Super-GT"' arch/arm64/configs/alioth_defconfig
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -        
