--- a/.github/workflows/K40-MIUI.yml
+++ b/.github/workflows/K40-MIUI.yml
@@ -12,7 +12,7 @@ jobs:
       with:
         github-server-url: 'https://github.com'
         repository: Rohail33/RealKing_kernel_SM8250
-        ref: alioth
+        ref: base
         path: android-kernel
         
     - name: Setup Build Environment
@@ -34,7 +34,7 @@ jobs:
         cd android-kernel
         sed -i 's/CONFIG_LOCALVERSION=/# /' arch/arm64/configs/alioth_defconfig
         sed -i 's/CONFIG_ZRAM=y/# CONFIG_ZRAM=y/' arch/arm64/configs/alioth_defconfig
-        sed -i '/-Reborn/aCONFIG_LOCALVERSION="~Super-GT"' arch/arm64/configs/alioth_defconfig
+        sed -i '/-Rise/aCONFIG_LOCALVERSION="~Super-GT"' arch/arm64/configs/alioth_defconfig
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
         wget -q "https://raw.githubusercontent.com/WeeAris/RK-KSU-AOSP-Daily-Build/main/0001-Add-KernelSU-calls-to-the-kernel-source.patch" -O KernelSU.patch
         git apply ./KernelSU.patch
